--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "jwks-rsa": "^2.0.4"
   },
   "devDependencies": {
+    "@jest/types": "^27.1.1",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.7.4",
+    "@types/supertest": "^2.0.11",
     "dotenv": "^10.0.0",
+    "install": "^0.13.0",
     "jest": "^27.2.1",
     "nodemon": "^2.0.12",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
