--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
-    "jwks-rsa": "^2.0.4"
+    "jwks-rsa": "^2.0.4",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@jest/types": "^27.1.1",
