--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.7.4",
+    "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "dotenv": "^10.0.0",
     "install": "^0.13.0",
