--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myjobplanner-service
+  name: myjobplanner-api-service
 spec:
   ports:
     - port: 3000
