--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ POSTGRES_USER=myjobplanner
 POSTGRES_PASSWORD=myjobplanner
 POSTGRES_HOST=localhost
 POSTGRES_DB=myjobplanner
+DATABASE_URL="postgres://myjobplanner:myjobplanner@localhost/myjobplanner"
+SHADOW_DATABASE_URL="postgres://myjobplanner:myjobplanner@localhost/myjobplanner_shadow"
+ROOT_DATABASE_URL="postgres://postgres:postgres@localhost/postgres"
 AUTH0_DOMAIN=https://myjobplanner.eu.auth0.com/
 AUTH0_IDENTIFIER=https://api.myjobplanner.com
