--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: auth0-configuration
+data:
+  AUTH0_DOMAIN: "https://myjobplanner.eu.auth0.com/"
+  AUTH0_IDENTIFIER: "https://api.myjobplanner.com"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,7 +28,7 @@ spec:
             - containerPort: 3000
           env:
             - name: POSTGRES_HOST
-              value: "postgres-service"
+              value: "postgres-service.default.svc.cluster.local"
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -28,3 +37,5 @@ spec:
           envFrom:
             - configMapRef:
                 name: postgres-configuration
+            - configMapRef:
+                name: auth0-configuration
