Add DI with repository pattern

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^2.0.4",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@jest/types": "^27.1.1",
