--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^2.0.4",
     "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "typed-inject": "^3.0.1"
   },
   "devDependencies": {
     "@jest/types": "^27.1.1",
