Yay... tests passing

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "myjobplanner-api",
   "version": "1.0.0",
   "description": "",
-  "main": "build/src/app.js",
+  "main": "build/src/server.js",
   "scripts": {
     "build": "tsc --project ./",
-    "dev": "nodemon -r dotenv/config src/app.ts",
-    "start": "node build/src/app.js",
+    "dev": "nodemon -r dotenv/config src/server.ts",
+    "start": "node build/src/server.js",
     "test": "jest",
     "graphile-watch": "npx env-cmd --no-override graphile-migrate watch",
     "graphile-migrate": "npx env-cmd --no-override graphile-migrate migrate",
