--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-openapi-validator": "^4.13.2",
     "jwks-rsa": "^2.0.4",
     "pg": "^8.7.1",
+    "swagger-ui-express": "^4.1.6",
     "typed-inject": "^3.0.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/node": "^16.7.4",
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "dotenv": "^10.0.0",
     "install": "^0.13.0",
     "jest": "^27.2.1",
