--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ SHADOW_DATABASE_URL="postgres://myjobplanner:myjobplanner@localhost/myjobplanner
 ROOT_DATABASE_URL="postgres://myjobplanner:myjobplanner@localhost/postgres"
 AUTH0_DOMAIN=https://myjobplanner.eu.auth0.com/
 AUTH0_IDENTIFIER=https://api.myjobplanner.com
+AUTH0_SWAGGER_UI_CLIENT_ID=05ixRpURhjZodPj5lDCg7XID9WVmH5lS
