--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,7 @@ build:
       docker:
         dockerfile: Dockerfile
 deploy:
-  kubectl:
-    manifests:
-      - k8s/*.yaml
+  kustomize:
+    paths:
+    - k8s/local
   kubeContext: minikube
