--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bunyan": "^1.8.15",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
@@ -26,6 +27,7 @@
     "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6",
     "typed-inject": "^3.0.1",
+    "uuid": "^8.3.2",
     "zapatos": "^5.0.0"
   },
   "devDependencies": {
@@ -33,12 +35,14 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@jest/types": "^27.1.1",
+    "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.7.4",
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "dotenv": "^10.0.0",
     "install": "^0.13.0",
     "jest": "^27.2.1",
