--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "graphile-migrate": "npx env-cmd --no-override graphile-migrate migrate",
     "graphile-commit": "npx env-cmd --no-override graphile-migrate commit",
     "zapatos": "npx env-cmd --no-override npx zapatos",
-    "skaffold": "skaffold dev --tail --port-forward"
+    "skaffold": "skaffold dev --default-repo dev.local --tail --port-forward"
   },
   "keywords": [],
   "author": "",
