--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -2,5 +2,5 @@ kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
-  - deployment.yaml
+  - auth0-configuration.yaml
   - service.yaml
