--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ ROOT_DATABASE_URL="postgres://myjobplanner:myjobplanner@localhost/postgres"
 AUTH0_DOMAIN=https://myjobplanner.eu.auth0.com/
 AUTH0_IDENTIFIER=https://api.myjobplanner.com
 AUTH0_SWAGGER_UI_CLIENT_ID=05ixRpURhjZodPj5lDCg7XID9WVmH5lS
+LOG_LEVEL=debug
