Revert "Use buildpacks"
This reverts commit 12e2f1556098c63a6fc2a1b9c67e678d980e1abd.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,11 +3,9 @@ kind: Config
 build:
   artifacts:
     - image: myjobplanner-api-image
-      buildpacks:
-        builder: gcr.io/buildpacks/builder:v1
-        dependencies:
-          paths:
-          - src/*.ts
+      context: ./
+      docker:
+        dockerfile: Dockerfile
 deploy:
   logs:
     jsonParse:
