--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -1,36 +1,11 @@
-apiVersion: serving.knative.dev/v1
+apiVersion: v1
 kind: Service
 metadata:
-  name: myjobplanner-api
+  name: myjobplanner-api-service
 spec:
-  template:
-    spec:
-      containers:
-        - image: myjobplanner-api-image
-          ports:
-            - containerPort: 3000
-          env:
-            - name: POSTGRES_HOST
-              value: "postgres-service.default.svc.cluster.local"
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-credentials
-                  key: password
-          envFrom:
-            - configMapRef:
-                name: postgres-configuration
-            - configMapRef:
-                name: auth0-configuration
-          # readinessProbe:
-          #   httpGet:
-          #     path: /healthz
-          #     port: 3000
-          #   initialDelaySeconds: 2
-          #   timeoutSeconds: 2
-          # livenessProbe:
-          #   httpGet:
-          #     path: /healthz
-          #     port: 3000
-          #   initialDelaySeconds: 2
-          #   timeoutSeconds: 2
+  ports:
+    - port: 3000
+      targetPort: 3000
+  type: NodePort
+  selector:
+    app: myjobplanner
