--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "graphile-commit": "npx env-cmd --no-override graphile-migrate commit",
     "zapatos": "npx env-cmd --no-override npx zapatos",
     "skaffold": "skaffold dev --tail --port-forward",
-    "openapi-types": "npx openapi-typescript http://myjobplanner-api.default.10.98.41.24.sslip.io/schema.json --export-type --output src/schema.ts"
+    "openapi-types": "npx openapi-typescript http://myjobplanner-api.default.10.98.41.24.sslip.io/schema.json --export-type --output src/schema.ts",
+    "test-integration": "npm run postgresql && npm run wait-for-postgres && npm run graphile-migrate && TEST_INTEGRATION=true jest --config jest.integration.config.ts ; npm run stop-postgresql",
+    "postgresql": "docker run --rm --name integration-test-myjobplanner-postgres -e POSTGRES_USER=myjobplanner -e POSTGRES_PASSWORD=myjobplanner -e POSTGRES_DB=myjobplanner -p 5432:5432 -d postgres",
+    "stop-postgresql": "docker stop integration-test-myjobplanner-postgres",
+    "wait-for-postgres": "timeout 90s bash -c 'until docker exec integration-test-myjobplanner-postgres pg_isready ; do sleep 5 ; done'"
   },
   "keywords": [],
   "author": "",
