--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "tsc --project ./",
     "dev": "nodemon -r dotenv/config src/server.ts",
     "start": "node build/src/server.js",
-    "test": "LOG_LEVEL=info jest",
+    "test": "LOG_LEVEL=info SKIP_JWT_VERIFICATION=true jest",
     "graphile-watch": "npx env-cmd --no-override graphile-migrate watch",
     "graphile-migrate": "npx env-cmd --no-override graphile-migrate migrate",
     "graphile-commit": "npx env-cmd --no-override graphile-migrate commit",
     "zapatos": "npx env-cmd --no-override npx zapatos",
     "skaffold": "skaffold dev --tail --port-forward",
     "openapi-types": "npx openapi-typescript http://myjobplanner-api.default.10.98.41.24.sslip.io/schema.json --export-type --output src/schema.ts",
-    "test-integration": "npm run postgresql && npm run wait-for-postgres && npm run graphile-migrate && TEST_INTEGRATION=true jest --config jest.integration.config.ts ; npm run stop-postgresql",
+    "test-integration": "npm run postgresql && npm run wait-for-postgres && npm run graphile-migrate && SKIP_JWT_VERIFICATION=true jest --config jest.integration.config.ts ; npm run stop-postgresql",
     "postgresql": "docker run --rm --name integration-test-myjobplanner-postgres -e POSTGRES_USER=myjobplanner -e POSTGRES_PASSWORD=myjobplanner -e POSTGRES_DB=myjobplanner -p 5432:5432 -d postgres",
     "stop-postgresql": "docker stop integration-test-myjobplanner-postgres",
     "wait-for-postgres": "timeout 90s bash -c 'until docker exec integration-test-myjobplanner-postgres pg_isready ; do sleep 5 ; done'"
