--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -2,7 +2,7 @@ name: myJobPlanner Api Integration Tests
 on: push
 
 jobs:
-  container-job:
+  integration-tests:
     runs-on: ubuntu-latest
     container: node:16.16.0-bullseye
 
