--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
     "express-openapi-validator": "^4.13.2",
+    "inversify": "^6.0.1",
     "jwks-rsa": "^2.0.4",
     "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "typed-inject": "^3.0.1",
     "uuid": "^8.3.2",
